--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "private": true,
   "dependencies": {
     "@reach/router": "^1.3.4",
-    "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
     "@types/lodash": "^4.14.161",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -25,7 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,8 +42,22 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@types/chai": "^4.2.12",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^24.0.0",
     "@types/reach__router": "^1.3.5",
+    "@types/react-test-renderer": "^16.9.3",
     "@types/redux-immutable-state-invariant": "^2.1.1",
-    "redux-immutable-state-invariant": "^2.1.0"
+    "@types/sinon": "^9.0.5",
+    "chai-jest-mocks": "^1.2.4",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "jest-sinon": "^1.0.4",
+    "jest-transform-css": "^2.0.0",
+    "react-test-renderer": "^16.13.1",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "ts-jest": "^26.3.0"
   }
 }
